k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
  labels:
    app: backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: svitlanakizilpinar/final-app:63d01371f8abe27c160bf3ecf7012b77543c4a9d
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
